--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
 
   <groupId>org.folio</groupId>
   <artifactId>mod-inventory-update</artifactId>
-  <version>0.0.1</version>
+  <version>0.0.2</version>
   <name>mod-inventory-update</name>
 
   <licenses>
@@ -19,7 +19,7 @@
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <vertx-version>3.8.5</vertx-version>
+    <vertx-version>3.9.2</vertx-version>
     <docker.registry>docker.indexdata.com:5000</docker.registry>
   </properties>
 
@@ -27,12 +27,12 @@
     <dependency>
       <groupId>org.folio</groupId>
       <artifactId>domain-models-runtime</artifactId>
-      <version>21.0.4</version>
+      <version>31.0.0</version>
     </dependency>
     <dependency>
       <groupId>org.folio.okapi</groupId>
       <artifactId>okapi-common</artifactId>
-      <version>2.36.0</version>
+      <version>3.1.3</version>
     </dependency>
     <!-- logging see http://www.slf4j.org/legacy.html -->
     <!-- we use SLF4J for our logging interface -->
@@ -47,11 +47,6 @@
       <artifactId>slf4j-log4j12</artifactId>
       <version>1.7.13</version>
     </dependency>
-    <dependency>
-      <groupId>log4j</groupId>
-      <artifactId>log4j</artifactId>
-      <version>1.2.17</version>
-    </dependency>
     <!-- include slf4j bridges to proxy all logging from library deps to our logging impl -->
     <dependency>
       <groupId>org.slf4j</groupId>
@@ -59,22 +54,6 @@
       <version>1.7.18</version>
     </dependency>
 
-    <dependency>
-      <groupId>io.vertx</groupId>
-      <artifactId>vertx-core</artifactId>
-      <version>${vertx-version}</version>
-    </dependency>
-    <dependency>
-      <groupId>io.vertx</groupId>
-      <artifactId>vertx-web</artifactId>
-      <version>${vertx-version}</version>
-    </dependency>
-    <dependency>
-      <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
-      <version>4.12</version>
-      <scope>test</scope>
-    </dependency>
     <dependency>
       <groupId>io.vertx</groupId>
       <artifactId>vertx-unit</artifactId>
@@ -101,11 +80,12 @@
     <plugins>
       <plugin>
         <artifactId>maven-compiler-plugin</artifactId>
-        <version>3.3</version>
+        <version>3.8.1</version>
         <configuration>
           <source>1.8</source>
           <target>1.8</target>
           <compilerArgument>-Xlint:unchecked</compilerArgument>
+          <encoding>UTF-8</encoding>
         </configuration>
       </plugin>
       <plugin>
