Update Netty, Vert.x, log4j, drop RMB (CVE-2021-43797, ...)
Update log4j from both 1.2.17 and 2.13.3 to 2.17.1 fixing
* https://nvd.nist.gov/vuln/detail/CVE-2022-23305
* https://nvd.nist.gov/vuln/detail/CVE-2022-23302
* https://nvd.nist.gov/vuln/detail/CVE-2021-45105
* https://nvd.nist.gov/vuln/detail/CVE-2021-45046
* https://nvd.nist.gov/vuln/detail/CVE-2021-44832
* https://nvd.nist.gov/vuln/detail/CVE-2021-4104
* https://nvd.nist.gov/vuln/detail/CVE-2019-17571

Update Vert.x from 4.0.0 to 4.2.4, this updates Netty and jackson-databind.
Indirectly update Netty from 4.1.42 to 4.1.73 fixing:
* https://nvd.nist.gov/vuln/detail/CVE-2021-43797
* https://nvd.nist.gov/vuln/detail/CVE-2021-21290
Indirectly update jackson-databind from 2.10.2 to 2.13.1 fixing
* https://nvd.nist.gov/vuln/detail/CVE-2020-25649

Update okapi-common from 3.1.3 to 4.12.0.
Remove raml-module-builder (RMB) reducing
the fat jar size from 49 MB to 9 MB and
the Docker image size from 225 MB to 184MB.

Update junit from 4.12 to 4.13.2 fixing
* https://nvd.nist.gov/vuln/detail/CVE-2020-15250

Update rest-assured from 2.8.0 to 4.5.0.

--- a/pom.xml
+++ b/pom.xml
@@ -16,64 +16,71 @@
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <vertx-version>4.0.0</vertx-version>
     <docker.registry>docker.indexdata.com:5000</docker.registry>
-    <raml-module-builder-version>31.1.0</raml-module-builder-version>
     <ramlfiles_path>${basedir}/ramls/</ramlfiles_path>
   </properties>
 
+  <dependencyManagement>
+    <dependencies>
+      <dependency>
+        <groupId>io.vertx</groupId>
+        <artifactId>vertx-stack-depchain</artifactId>
+        <version>4.2.4</version>
+        <type>pom</type>
+        <scope>import</scope>
+      </dependency>
+      <dependency>
+        <groupId>org.apache.logging.log4j</groupId>
+        <artifactId>log4j-bom</artifactId>
+        <version>2.17.1</version>
+        <type>pom</type>
+        <scope>import</scope>
+      </dependency>
+    </dependencies>
+  </dependencyManagement>
+
   <dependencies>
     <dependency>
-      <groupId>org.folio</groupId>
-      <artifactId>domain-models-runtime</artifactId>
-      <version>${raml-module-builder-version}</version>
+      <groupId>io.vertx</groupId>
+      <artifactId>vertx-core</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>io.vertx</groupId>
+      <artifactId>vertx-web</artifactId>
+    </dependency>
+   <dependency>
+      <groupId>io.vertx</groupId>
+      <artifactId>vertx-web-client</artifactId>
     </dependency>
     <dependency>
       <groupId>org.folio.okapi</groupId>
       <artifactId>okapi-common</artifactId>
-      <version>3.1.3</version>
+      <version>4.12.0</version>
     </dependency>
-    <!-- logging see http://www.slf4j.org/legacy.html -->
-    <!-- we use SLF4J for our logging interface -->
     <dependency>
-      <groupId>org.slf4j</groupId>
-      <artifactId>slf4j-api</artifactId>
-      <version>1.7.18</version>
-    </dependency>
-    <!-- we use log4j as our logging implementation -->
-    <dependency>
-      <groupId>org.slf4j</groupId>
-      <artifactId>slf4j-log4j12</artifactId>
-      <version>1.7.13</version>
-    </dependency>
-    <!-- include slf4j bridges to proxy all logging from library deps to our logging impl -->
-    <dependency>
-      <groupId>org.slf4j</groupId>
-      <artifactId>jcl-over-slf4j</artifactId>
-      <version>1.7.18</version>
+      <groupId>org.apache.logging.log4j</groupId>
+      <artifactId>log4j-core</artifactId>
     </dependency>
 
     <dependency>
+      <groupId>junit</groupId>
+      <artifactId>junit</artifactId>
+      <version>4.13.2</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
       <groupId>io.vertx</groupId>
       <artifactId>vertx-unit</artifactId>
-      <version>${vertx-version}</version>
       <scope>test</scope>
     </dependency>
     <dependency>
-      <groupId>com.jayway.restassured</groupId>
-      <artifactId>rest-assured-common</artifactId>
-      <version>2.8.0</version>
-      <scope>test</scope>
-      <type>jar</type>
-    </dependency>
-    <dependency>
-      <groupId>com.jayway.restassured</groupId>
+      <groupId>io.rest-assured</groupId>
       <artifactId>rest-assured</artifactId>
-      <version>2.8.0</version>
+      <version>4.5.0</version>
       <scope>test</scope>
-      <type>jar</type>
     </dependency>
   </dependencies>
+
   <distributionManagement>
     <repository>
       <id>folio-nexus</id>
